[project]
name = "owl-station"
version = "0.1.0"
description = "OWL-Station - experimental design wrapper around OWL-Planner"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "plotly>=6.5.0",
    "owlplanner @ git+https://github.com/mdlacasse/Owl.git@7abca00",  # 12/25/2025
]

[project.scripts]
owlstation  = "owlstation.cli._main:cli" 
owls = "owlstation.cli._main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/owlstation/version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/owlstation"]
